# deep-learning-from-scratch

JEPA/: I_JEPA.py
LM/: MultiHeadAttention_with_RoPE.py
RL/: DQN.py
generative/: VAE.py  centernet_model.py  conditional_diffusion.py  conditional_diffusion_AIMC.py  conditional_hierarchical_VAE.py  dfs  diffusion.py  pyproject.toml  run.py  verify_centernet.py  verify_yolov8n.py  viz.py  yolov8n_neck_head.py
