[project]
name = "generative"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aihwkit>=1.1.0",
    "matplotlib>=3.11.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
    "ultralytics>=8.4.75",
]
